--- a/IBM Data Science/IBM_Coursera.ipynb
+++ b/IBM Data Science/IBM_Coursera.ipynb
@@ -172,14 +172,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# input fro user\n",
+        "# input for user\n",
         "b = int(input(\"Enter a nuber for conversion of min to hour : \"))\n",
         "\n",
-        "#arithmetic expressions\n",
+        "# Arithmetic expressions\n",
         "hours=b//60\n",
         "min=b%60\n",
         "\n",
-        "#format of output and print statement\n",
+        "# Format of output and print statement\n",
         "time=\"{}:{}\".format(hours,min)\n",
         "print(time)"
       ],
