--- a/IBM Data Science/IBM_Final_Assignment.ipynb
+++ b/IBM Data Science/IBM_Final_Assignment.ipynb
@@ -17,7 +17,7 @@
         "id": "GtwLIHDpplsA"
       },
       "source": [
-        "<h1>Extracting and Visualizing Stock Data</h1>\n"
+        "<h1>Analyzing Historical Stock/Revenue Data and Building a Dashboard</h1>\n"
       ]
     },
     {
